# nes_dev_board

./: .bazelrc  .gitignore  Library.kicad_sym  README.md  WORKSPACE.bazel  expansion.kicad_sch  nes2.kicad_dru  nes2.kicad_pcb  nes2.kicad_prl  nes2.kicad_pro  nes_5v.kicad_sch  nes_level_shifters.kicad_sch  nes_memories.kicad_sch  nes_power.kicad_sch
Library.pretty/: TSOP-II-44_10.16x18.41mm_P0.8mm.kicad_mod  TSSOP-48_6.1x12.5mm_P0.5mm.kicad_mod
fpga/: pinmap.pcf
fpga/hx8k/: BUILD.bazel
fpga/larsen/: BUILD.bazel  larsen.v
production/: netlist.ipc
rules/: repo.bzl
schematics/: expansion.kicad_sch  nes2.kicad_sch  nes_level_shifters.kicad_sch
schematics/Library.pretty/: C_0402_1005Metric.kicad_mod  HX8K Eval Board.kicad_mod  L_Vishay_IFSC-1515AH_4x4x1.8mm.kicad_mod  NES_Cartridge_Edge.kicad_mod  PinHeader_1x02_P2.54mm_Vertical.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_2x06_P2.54mm_Vertical.kicad_mod  PinHeader_2x36_P2.54mm_Vertical.kicad_mod  R_0402_1005Metric.kicad_mod  SOT-23-5.kicad_mod
